[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Emitter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Chalkboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Collector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Code/Level.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Walls.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shaders/main.tres" type="Theme" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 0.784314 )

[node name="Base" type="Node2D"]
script = ExtResource( 4 )

[node name="Emitter" parent="." instance=ExtResource( 1 )]
position = Vector2( 896, 192 )
emit_time = 3.0
emit_direction = Vector2( -1, -1 )
emit_speed = 200.0
default_value = 5.0

[node name="Collector" parent="." instance=ExtResource( 3 )]
position = Vector2( 256, 512 )
desired_value = 12.0

[node name="Walls" parent="." instance=ExtResource( 5 )]
position = Vector2( -448, -264 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="CanvasLayer"]
margin_left = -64.0
margin_top = -64.0
margin_right = 1344.0
margin_bottom = 768.0
mouse_filter = 2
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" parent="CanvasLayer" instance=ExtResource( 2 )]
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" groups=["storage"]]
margin_left = 1208.0
margin_right = 1240.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 16, 592 )
mouse_filter = 2
color = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 1184.0
margin_top = 664.0
margin_right = 1264.0
margin_bottom = 712.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "MENU"

[node name="ZoomInButton" type="Button" parent="CanvasLayer"]
margin_left = 1112.0
margin_top = 664.0
margin_right = 1160.0
margin_bottom = 712.0
theme = ExtResource( 8 )
text = "+"

[node name="ZoomOutButton" type="Button" parent="CanvasLayer"]
margin_left = 1048.0
margin_top = 664.0
margin_right = 1096.0
margin_bottom = 712.0
theme = ExtResource( 8 )
text = "-"

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/ZoomInButton" to="." method="_on_ZoomInButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ZoomOutButton" to="." method="_on_ZoomOutButton_pressed"]
